--- a/BecaDotNet.UI.MVC.RazorView/Views/Login/Index.cshtml
+++ b/BecaDotNet.UI.MVC.RazorView/Views/Login/Index.cshtml
@@ -12,27 +12,31 @@
 </head>
 <body>
     <div class="jumbotron">
-        <h1>Login</h1>
-        @using (Html.BeginForm("Index", "Login", FormMethod.Post, null))
-        {
-        <div class="form-group">
-            <input type="text" id="txtLogin" placeholder="Login" required name="login"/>
-        </div>
-        <div class="form-group">
-            <input type="password" id="txtPassword" placeholder="Senha" required name="password"/>
-        </div>
-        <div class="form-group">
-            <button id="btnLogin" class="btn btn-success">Login</button>
-        </div>
-        }
-        @if (ViewBag.LoginError != null)
-        {
-        <div id="dvAuthError">
-            @foreach (var m in ViewBag.LoginError) {
-            <p>@m</p>
+
+        <div class="mx-auto col-5">
+            <h1>Login</h1>
+            @using (Html.BeginForm("Index", "Login", FormMethod.Post, null))
+            {
+                <div class="form-group">
+                    <input type="text" id="txtLogin" placeholder="Login" required name="login" />
+                </div>
+                <div class="form-group">
+                    <input type="password" id="txtPassword" placeholder="Senha" required name="password" />
+                </div>
+                <div class="form-group">
+                    <button id="btnLogin" class="btn btn-success">Login</button>
+                </div>
+            }
+            @if (ViewBag.LoginError != null)
+            {
+                <div id="dvAuthError">
+                    @foreach (var m in ViewBag.LoginError)
+                    {
+                        <p>@m</p>
+                    }
+                </div>
             }
         </div>
-        }
     </div>
 </body>
 </html>
