--- a/BecaDotNet.UI.MVC.RazorView/Views/Login/Index.cshtml
+++ b/BecaDotNet.UI.MVC.RazorView/Views/Login/Index.cshtml
@@ -26,6 +26,7 @@
                 <div class="form-group">
                     <button id="btnLogin" class="btn btn-success">Login</button>
                 </div>
+                <input type="hidden" name="returnUrl" value="@ViewBag.ReturnUrl" />
             }
             @if (ViewBag.LoginError != null)
             {
