--- a/BecaDotNet.UI.MVC.RazorView/Views/User/List.cshtml
+++ b/BecaDotNet.UI.MVC.RazorView/Views/User/List.cshtml
@@ -1,9 +1,59 @@
-﻿
+﻿@model IEnumerable<BecaDotNet.UI.MVC.RazorView.Models.ViewModel.UserListViewModel>
 @{
     ViewBag.Title = "List";
     Layout = "~/Views/Shared/Layout.cshtml";
 }
 
 <h2>List</h2>
-@Html.Action("ListUser", "User",null)
+@*@Html.Action("ListUser", "User",null)*@
+
+
+
+
+<table class="table">
+    <thead class="thead-dark">
+        <tr>
+            <th>Nome</th>
+            <th>Login</th>
+            <th>Data de Cadastro</th>
+            <th>Usuário Ativo</th>
+            <th>Tipo de Usuário</th>
+            <th>Superior</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.NomeUsuario</td>
+                <td>@item.LoginUsuario</td>
+                <td>@item.DataCadastro.ToString("dd/MM/yyyy hh:mi:ss")</td>
+                <td>@(item.UsuarioAtivo ? "Sim" : "Não")</td>
+                <td>@item.DescTipoUsuario</td>
+                <td>@item.NomeSuperior</td>
+                <td>
+                    <a href="#" class="btn btn-danger deleteUser" rel="@item.Id">Excluir</a>
+                    <a href="#" class="btn btn-success editUser" rel="@item.Id">Editar</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<script>
+    $(function () {
+        $('.deleteUser').on('click', function (e) {
+            e.preventDefault();
+            var id = this.getAttribute('rel');
+            alert(id);
+        });
+        $('.editUser').on('click', function (e) {
+
+            e.preventDefault();
+            var id = this.getAttribute('rel');
+            window.location = '/User/Edit/' + id;
+        });
+    });
+</script>
 
