--- a/BecaDotNet.UI.MVC.RazorView/Views/Shared/Layout.cshtml
+++ b/BecaDotNet.UI.MVC.RazorView/Views/Shared/Layout.cshtml
@@ -9,25 +9,24 @@
 </head>
 <body>
     <header>
-
-        <div class="jumbotron">
-
-            <div class="col-8">
+        <div class="row card-header">
+            <div class="col-1"></div>
+            <div class="col-7 text-right">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto" id="menu">
                             <li class="nav-item"><a class="nav-link" href="~/Home">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="~/User/List">Listar Usuários</a></li>
-                            <li class="nav-item"><a class="nav-link" href="~/User/New">Criar Usuário</a></li>
+                            <li class="nav-item"><a class="nav-link" href="~/User/List">Usuários</a></li>
+                            <li class="nav-item"><a class="nav-link" href="~/Client">Clientes</li>
                         </ul>
                     </div>
-                    <div class="col-3">
-                        <p>Olá, <b> Dar um jeito de escrever o nome do usário aqui</b></p>
-                    </div>
-                    <div class="col-1">
-                        @Html.ActionLink("Sair", "DoLogout", "Login")
-                    </div>
                 </nav>
+            </div>
+            <div class="col-2">
+                <p>Olá, <b>@BecaDotNet.UI.MVC.RazorView.Models.CurrentUser.UserData.Name</b></p>
+            </div>
+            <div class="col-1">
+                @Html.ActionLink("Sair", "DoLogout", "Login")
             </div>
         </div>
     </header>
