--- a/BecaDotNet.UI.MVC.RazorView/Views/Shared/Layout.cshtml
+++ b/BecaDotNet.UI.MVC.RazorView/Views/Shared/Layout.cshtml
@@ -17,7 +17,8 @@
                         <ul class="navbar-nav mr-auto" id="menu">
                             <li class="nav-item"><a class="nav-link" href="~/Home">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="~/User/List">Usuários</a></li>
-                            <li class="nav-item"><a class="nav-link" href="~/Client">Clientes</li>
+                            <li class="nav-item"><a class="nav-link" href="~/Client">Clientes</a></li>
+                            <li class="nav-item"><a class="nav-link" href="~/Project">Projetos</a></li>
                         </ul>
                     </div>
                 </nav>
